<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/blue"
    tools:context="com.softwork.ydk.beacontestapp.LoginActivity">

    <LinearLayout
        android:layout_weight="2"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@drawable/mark_white"
            android:layout_width="@dimen/mark_size_small"
            android:layout_height="@dimen/mark_size_small" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <EditText
            android:padding="@dimen/edit_text_padding"
            android:background="@color/white"
            android:layout_marginTop="20dp"
            android:id="@+id/idEditText"
            android:hint="@string/id"
            android:textColor="@color/gray"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_marginTop="1dp"
            android:padding="@dimen/edit_text_padding"
            android:background="@color/white"
            android:id="@+id/passwordEditText"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColor="@color/gray"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_marginTop="10dp"
            android:background="@drawable/blue_simple_button"
            android:text="@string/login"
            android:textColor="@drawable/blue_simple_button_text"
            android:onClick="login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_marginTop="30dp"
            android:background="@color/transparent"
            android:text="@string/sign_up"
            android:textColor="@drawable/white_simple_text_button"
            android:onClick="join"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>
